[package]
name = "spars"
version = "1.2.0"
edition = "2021"
authors = ["Tim Stuart <stuartt@gis.a-star.edu.sg>"]
description = "💥 Disk-based sparse matrix statistics and subsetting 💥"
license = "MIT"
repository = "https://github.com/stuart-lab/spars"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"
regex = "1.5"
clap_mangen = "0.2"
tempfile = "3.19.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"